--- a/index.html
+++ b/index.html
@@ -5,9 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <nav>
+        Aqui está a Navbar
+    </nav>
+    <br>
     <h1>Bem vindo</h1>
     <h3>Primeiro texto do site</h3>
+    <br>
+    <ol>
+        <li>Item 1 da lista</li>
+        <li>Item 2 da lista</li>
+        <li>Item 3 da lista</li>
+    </ol>
+    <br>
+    <footer>
+        Aqui está o footer
+    </footer>
 </body>
 </html>
