--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    <nav>
-        Aqui está a Navbar
-    </nav>
+    <header>  
+        <nav>
+            Aqui está a Navbar
+        </nav>
+    </header>
     <br>
     <main>
         <h1>Bem vindo</h1>
